# hdTemplateRenderer

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.py
hdTemplate/: CMakeLists.txt  config.cpp  config.h  instancer.cpp  instancer.h  mesh.cpp  mesh.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  sceneData.cpp  sceneData.h  templateScene.cpp  templateScene.h
